--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Juan Abimael Santos Castillo"]
 description = "Sequential pattern analysis through variable-order Markov chains with spectral decomposition and quantum state modeling. Built for detecting deviations in finite-alphabet sequences."
-licence = "MIT"
+license = "MIT"
 repository = "https://github.com/Abimael10/anomaly-grid"
 keywords = ["anomaly-detection", "bayesian", "markov-chains", "coherence", "simulation"]
 readme = "README.md"
